--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,26 @@
+# Golang CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
   build:
     docker:
+      # specify the version
       - image: circleci/golang:1.9.3
-      - image: circleci/mysql:5.6
 
-    working_directory: /go/src/github.com/square/squalor
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
 
+    #### TEMPLATE_NOTE: go expects specific checkout path representing url
+    #### expecting it in the form of
+    ####   /go/src/github.com/circleci/go-tool
+    ####   /go/src/bitbucket.org/circleci/go-tool
+    working_directory: /go/src/github.com/msquaredh/squalor
     steps:
       - checkout
-      - run:
-        name: Waiting for Postgres to be ready
-        command: |
-          for i in `seq 1 10`;
-          do
-            nc -z localhost 3306 && echo Success && exit 0
-            echo -n .
-            sleep 1
-          done
-          echo Failed waiting for MySQL && exit 1
 
-      - run:
-        name: Unit Tests
-        command: go test -race .
-
+      # specify any bash command here prefixed with `run: `
+      - run: go get -v -t -d ./...
+      - run: go test -v ./...
