combining error strings in case the transaction block fails and the rollback fails as well.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,4 @@ jobs:
             done
             echo Failed waiting for MySQL && exit 1
       - run: go get -v -t -d ./...
-      - run: go test -v -failfast ./...
+      - run: go test -v -race ./...
