--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,9 +20,14 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
+  
+    - name: Set up MySQL
+      run: |
+        sudo /etc/init.d/mysql start
+        mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v -race ./...
