--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Set up MySQL
       run: |
         sudo /etc/init.d/mysql start
-        mysql -u root -p 'root' -e 'CREATE DATABASE squalor_test;'
+        mysql -u root -p='root' -e 'CREATE DATABASE squalor_test;'
 
     - name: Build
       run: go build -v ./...
