--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,21 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:5.7
+
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_USER: root
+          MYSQL_PASSWORD: root
+          MYSQL_HOST: localhost
+          MYSQL_DATABASE: squalor_test
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
     - uses: actions/checkout@v3
 
@@ -20,11 +35,17 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
-  
-    - name: Set up MySQL
+
+    - name: Verify MySQL
       run: |
-        sudo /etc/init.d/mysql start
-        mysql -u root -p='root' -e 'CREATE DATABASE squalor_test;'
+        while ! mysqladmin ping -h"127.0.0.1" -P3306 --silent; do
+         sleep 1
+        done   
+  
+#    - name: Set up MySQL
+#      run: |
+#        sudo /etc/init.d/mysql start
+#        mysql -u root -p='root' -e 'CREATE DATABASE squalor_test;'
 
     - name: Build
       run: go build -v ./...
