--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,4 +39,4 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v -race ./...
+      run: MYSQL_PASSWORD=root go test -v -race ./...
