--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
 
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_PASSWORD: root
+          # MYSQL_PASSWORD: root
           MYSQL_HOST: localhost
           MYSQL_DATABASE: squalor_test
         ports:
@@ -39,4 +39,4 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: MYSQL_PASSWORD=root go test -v -race ./...
+      run: MYSQL_PASSWORD='' go test -v -race ./...
