--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Check MySQL
+      run: |
+        mysqladmin status
+        mysql -u=root -p=root -e 'CREATE DATABASE squalor_test;'
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -39,4 +44,6 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: MYSQL_PASSWORD='' go test -v -race ./...
+      run: |
+        export MYSQL_PASSWORD='root'
+        go test -v -race ./...
