--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,24 +16,17 @@ jobs:
     
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql
 
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          # MYSQL_PASSWORD: root
-          MYSQL_HOST: localhost
-          MYSQL_DATABASE: squalor_test
+          MYSQL_PASSWORD: root
         ports:
-          - 3306
+          - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Check MySQL
-      run: |
-        docker ps
-        mysql -u root --password=root -e 'CREATE DATABASE squalor_test;'
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -44,7 +37,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: |
-        export MYSQL_PASSWORD='root'
-        export MYSQL_HOSTNAME='mysql'
-        go test -v -race ./...
+      run: go test -v -race ./...
+      env:
+        MYSQL_HOST=localhost
+        MYSQL_PASSWORD=root
