--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
     
     services:
       mysql:
-        image: mysql
+        image: mysql:5.7
 
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
